# portfolio

./: .env.example  .gitignore  .gitlab-ci.yml  Caddyfile  README.md  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
app/: layout.tsx  page.tsx
backend/: .env.example  Dockerfile  go.mod  go.sum  main.py  pyproject.toml  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 649b70fcd2a2_initial_schema.py
backend/api/: blogs.py
backend/api/router/: blogs.py
backend/cmd/server/: main.go
backend/core/: config.py  database.py
backend/internal/cache/: redis.go
backend/internal/config/: config.go
backend/internal/handler/: feed.go  posts.go  sync.go  tags.go
backend/internal/middleware/: cache.go  cors.go
backend/internal/migrate/: migrate.go
backend/internal/model/: post.go
backend/internal/repository/: post_repo.go  tag_repo.go
backend/internal/service/: markdown.go  post_service.go  sync_service.go
backend/migrations/: 001_initial.sql
backend/models/: models.py  schema.py  schemas.py
backend/utils/: aws_services.py  blog_parser.py  file_service.py  file_services.py  github.py  github_webhook.py  parser.py  yaml_parser.py
components/: Navbar.tsx  ProjectShowcase.tsx  sign-in.tsx  sign-out.tsx
frontend/: .cta.json  components.json  package-lock.json  package.json
next-app/: next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts
prisma/: schema.prisma
tui/: README.md
web/: .dockerignore  Dockerfile  astro.config.mjs  package.json  (+3 more)
(+51 files in other folders)
