[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "ruff>=0.12.8",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
    "psycopg2-binary>=2.9.10",
]
