[project]
name = "backend"
version = "0.1.0"
description = "Backend for portfolio app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "ruff>=0.12.8",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "asyncpg>=0.30.0",
    "redis>=7.0.1",
    "hypercorn>=0.17.3",
    "uvloop>=0.22.1",
    "alembic>=1.17.1",
    "sqlalchemy>=2.0.42",
]
